crates/jarl-core/src/lints/base/any_is_na/snapshots/jarl_core__lints__base__any_is_na__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/base/any_is_na/mod.rs
expression: "get_fixed_text(vec![\"any(is.na(x))\", \"NA %in% x\", \"NA %notin% x\",\n\"any(is.na(foo(x)))\", \"any(is.na(x), na.rm = TRUE)\",], \"any_is_na\", None)"
---
OLD:
====
any(is.na(x))
NEW:
====
anyNA(x)

OLD:
====
NA %in% x
NEW:
====
anyNA(x)

OLD:
====
NA %notin% x
NEW:
====
!anyNA(x)

OLD:
====
any(is.na(foo(x)))
NEW:
====
anyNA(foo(x))

OLD:
====
any(is.na(x), na.rm = TRUE)
NEW:
====
anyNA(x)
